--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,4 +86,5 @@ jobs:
       - run: mix deps.get --only test
       - run: mix deps.compile
       - run: mix compile
+      - run: mix run -e 'IO.inspect(ExSqlean.CpuInfo.fullinfo())'
       - run: mix test
